--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -8,6 +8,17 @@
 }
 
 \begin{document}
+\section*{Objectives}
+\begin{itemize}
+    \item Getting acquainted with the lab environment.
+    \item Getting acquainted with the Linux operating system.
+    \item Preview of some TCP/IP diagnostic tools.
+    \item Capturing and analyzing the link layer, IP, and TCP headers.
+    \item Understanding the concept of encapsulation.
+    \item Understanding the concept of multiplexing using \textit{port numbers}, the IP \textit{protocol} field, and the Ethernet \textit{frame type} field.
+    \item Understanding the client–server architecture.
+\end{itemize}
+
 \section*{Systems Configuration}
 Launch GNS3 and make a network as below.
 You can use \lstbash[emph={eth0},morekeywords={[3]netmask}]{ifconfig eth0 192.168.0.1 netmask 255.255.255.0} to set ip.
