--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -8,6 +8,16 @@
 }
 
 \begin{document}
+\section*{Objectives}
+\begin{itemize}
+    \item Network interfaces and interface configuration.
+    \item Network load and statistics.
+    \item The Address Resolution Protocol (ARP) and its operations.
+    \item ICMP messages and Ping.
+    \item Concept of subnetting.
+    \item Duplicate IP addresses and incorrect subnet masks.
+\end{itemize}
+
 \part{Network Interface Exercises}
 The following exercises use the single segment network topology shown in \hyperref[fig:1.3]{Figure~1.3}.
 \begin{center}
