--- a/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
+++ b/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
@@ -8,6 +8,14 @@
 }
 
 \begin{document}
+\section*{Objectives}
+\begin{itemize}
+    \item The Cisco Internet Operating System (IOS) software.
+    \item Configuring a Cisco router.
+    \item Transparent bridge configuration and operation.
+    \item The spanning tree algorithm.
+\end{itemize}
+
 \part{Exercises on Cisco~IOS}
 In this lab, you need two hosts, a bridge, and two hubs, which are required to be connected as shown in \hyperref[fig:3.7]{Figure~3.7}, \hyperref[tab:3.2]{Table~3.2} and \hyperref[tab:3.3]{Table~3.3}.
 
