--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -8,6 +8,17 @@
 }
 
 \begin{document}
+\section*{Objectives}
+\begin{itemize}
+    \item Comparison of router and bridge.
+    \item IP forwarding.
+    \item Use of ICMP messages in routing.
+    \item The Routing Information Protocol (RIP).
+    \item The Open Shortest Path First (OSPF) protocol.
+    \item Static routing by manually building the routing tables in the routers and hosts.
+    \item Use of \textbf{Traceroute} to find an end-to-end route.
+\end{itemize}
+
 \part{A Simple Router Experiment}
 In this lab, you need two hosts, a bridge, and two hubs, which are required to be connected as shown in \hyperref[tab:4.2]{Table~4.2} and \hyperref[tab:4.3]{Table~4.3}.
 \begin{table}[H]
