--- a/5 UDP and its applications/UDP and its applications.tex
+++ b/5 UDP and its applications/UDP and its applications.tex
@@ -8,6 +8,16 @@
 }
 
 \begin{document}
+\section*{Objectives}
+\begin{itemize}
+    \item Study \textbf{socket} as a traffic generator, in terms of its features and command line options.
+    \item Study the User Datagram Protocol.
+    \item IP fragmentation.
+    \item MTU and path MTU discovery.
+    \item UDP applications, using the Trivial File Transfer Protocol as an example.
+    \item Compare UDP with TCP, using TFTP and the File Transfer Protocol (FTP).
+\end{itemize}
+
 \part{Using the \texttt{socket} Program}
 \label{sec:schema}
 In this lab, you will not need to a router, only two hosts and one hub to connect two host together as show in \hyperref[fig:5.0]{Figure~5.0} and \hyperref[tab:5.0]{Table~5.0}.
