--- a/6 TCP study/TCP and its applications.tex
+++ b/6 TCP study/TCP and its applications.tex
@@ -8,6 +8,17 @@
 }
 
 \begin{document}
+\section*{Objectives}
+\begin{itemize}
+    \item TCP connection establishment and termination.
+    \item TCP timers.
+    \item TCP timeout and retransmission.
+    \item TCP interactive data flow, using \textbf{telnet} as an example.
+    \item TCP bulk data flow, using \textbf{socket} as a traffic generator.
+    \item Further comparison of TCP and UDP.
+    \item Tuning the TCP/IP kernel.
+\end{itemize}
+
 \part{Exercises on TCP Connection Control}
 Like previous lab, connect two host with one hub together (Figure~5.0) or use Figure~1.3 with two host.
 
