--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -8,6 +8,16 @@
 }
 
 \begin{document}
+\section*{Objectives}
+\begin{itemize}
+    \item Multicast addressing.
+    \item Multicast group management.
+    \item Multicast routing: configuring a multicast router.
+    \item [-] Realtime video streaming using the \textbf{vlc}.
+    \item [-] Protocols supporting realtime streaming: RTP/RTCP and RTSP.
+    \item [-] Analyzing captured RTP/RTCP packets using \textbf{wireshark}.
+\end{itemize}
+
 \part{Simple Multicast Exercises}
 For all the exercises in this section, the network topology is given in \hyperref[fig:1.3]{Figure~1.3}, where all the hosts are connected to a single network segment using their default IP addresses, i.e.\ from 128.238.66.100 to 128.238.66.107.
 
