--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -8,6 +8,16 @@
 }
 
 \begin{document}
+\section*{Objectives}
+\begin{itemize}
+    \item The HyperText Transfer Protocol (HTTP) and the Apache web server.
+    \item The Common Gateway Interface (CGI) and other web-server app (like PHP, Ruby, Python, \dots).
+    \item The Dynamic Host Configuration Protocol (DHCP).
+    \item The Network Time Protocol (NTP).
+    \item The Network Address Translator (NAT) and the Port Address Translator (PAT).
+    \item [-] An introduction to socket programming.
+\end{itemize}
+
 \part{HTTP Exercises}
 For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.101.
 Add all host from \textit{utnetlab/term} (also you can use {Figure~3.server.gui}).
