--- a/9 Network management and security/Network management and security.tex
+++ b/9 Network management and security/Network management and security.tex
@@ -8,6 +8,17 @@
 }
 
 \begin{document}
+\section*{Objectives}
+\begin{itemize}
+    \item SNMP and MIBs, using NET-SNMP as an example, and using NETSNMP utilities to query MIB objects.
+    \item Encryption, confidentiality, and authentication, including DES, AES, RSA, MD5 and DSS.
+    \item Application layer security, using SSH and Kerberos as examples.
+    \item Transport layer security, including SSL and the secure Apache server.
+    \item Network layer security, IPsec and Virtual Private Networks.
+    \item Firewalls and IPTABLES.
+    \item Accounting, auditing, and intrusion detection.
+\end{itemize}
+
 \part{SNMP Exercises}
 For the exercises in this section, the network topology is given in \hyperref[fig:1.3]{Figure~1.3}, where all the hosts are connected in a single network segment using their IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.102.
 
