remove submit of tcpdum poutput

--- a/6 TCP study/TCP and its applications.tex
+++ b/6 TCP study/TCP and its applications.tex
@@ -150,7 +150,7 @@ ifconfig eth0 up
 When all the data segments are sent, save the \lstbash{tcpdump} output for the lab report.
 
 \begin{report}
-    \item Submit the \lstbash{tcpdump} output saved in this exercise.
+    \item [*] Submit the \lstbash{tcpdump} output saved in this exercise.
 
     \item From the \lstbash{tcpdump} output, identify when the cable was disconnected.
 
