--- a/0 Network and TCP-IP overview/Network and TCP-IP overview.fa.tex
+++ b/0 Network and TCP-IP overview/Network and TCP-IP overview.fa.tex
@@ -1,14 +1,14 @@
 \documentclass{../UTNetLabFa}
 
 \title{کلیات شبکه و پشته‌ی \textLR{TCP-IP}}
-
+\labnumber{۰}
 
 \begin{document}
 
-\tableofcontents
-\listoffigures
-\listoftables
-\lstlistoflistings
+% \tableofcontents
+% \listoffigures
+% \listoftables
+% \lstlistoflistings
 %\listofcodes
 \pagebreak
 
