--- a/6 TCP study/TCP and its applications.tex
+++ b/6 TCP study/TCP and its applications.tex
@@ -2,7 +2,8 @@
 
 \documentclass{../UTNetLab}
 
-\title{TCP and Its Applications}
+\title{TCP Study}
+\labnumber{6}
 \newcommand\reference{
    S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “TCP study,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 111–133.
 }
