--- a/9 Network management and security/Network management and security.tex
+++ b/9 Network management and security/Network management and security.tex
@@ -3,6 +3,7 @@
 \documentclass{../UTNetLab}
 
 \title{Network Management and Security}
+\labnumber{9}
 \newcommand\reference{
    S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “Network management and security,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 187–213.
 }
