--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -3,6 +3,7 @@
 \documentclass{../UTNetLab}
 
 \title{Static and Dynamic Routing}
+\labnumber{4}
 \newcommand\reference{
 	S. S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “Static and dynamic routing,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 77–99.
 }
