--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -3,6 +3,7 @@
 \documentclass{../UTNetLab}
 
 \title{Multicast and Realtime Service}
+\labnumber{7}
 \newcommand\reference{
    S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “Multicast and realtime service,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 134–158.
 }
