--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -425,7 +425,7 @@ Run the following command to capture any OSPF packets:
 tcpdump -x -s 120 ip proto 89
     \end{lstlisting}
 
-Login to each router and start the OSPF process (configure OSPF process from \autoref{sec:ospf}).
+Open console of each router and start the OSPF process (configure OSPF process from \autoref{sec:ospf}).
 Set the argument \textit{area-id} to 1 for all the routers.
 
 % The hosts in our lab run \lstbash{routed} (which uses RIP).
