--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -381,7 +381,7 @@ Then set the IP address and the network mask of your host as shown in the figure
 In addition, you need to add a default route in your host’s routing table, using the router interface on your subnet as the default router.
 One student should \lstbash{telnet} to the router and configure the router as shown in \hyperref[tab:8.5]{Table~8.5}.
 Note that there is a static translation that maps 10.0.0.7, or the \textit{h7}, to 128.238.61.104.
-Login to the router, execute \lstcisco{write term} to display the current router configuration.
+Open the router console, execute \lstcisco{write term} to display the current router configuration.
 Execute \lstcisco{show ip nat translations} in the \textit{Privileged EXEC} mode to display the translation table.
 Save both outputs for the lab report.
 
