add hint for report

--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -271,7 +271,7 @@ Save the \lstbash{wireshark} outputs for the lab report.
     \item What port numbers were used by the \textit{h1} (server) machine?
     What port numbers were used by the \textit{h0} (client) host?
 
-    \item How many bytes of data were returned by the \textit{h1} time server, both in the UDP case and in the TCP case?
+    \item How many bytes of data (application data) were returned by the \textit{h1} time server, both in the UDP case and in the TCP case?
 
     \item What TCP header options were used?
 \end{report}
